test/conformance/kuttl/mutate/refactor/replace-ingress-hosts/policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: replace-ingress-hosts
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
